--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "dependencies": {
     "@2toad/diff-match-patch": "^1.0.2",
     "@ceramicnetwork/http-client": "^2.0.4",
@@ -12,6 +13,7 @@
     "@nestjs/core": "^8.2.6",
     "@nestjs/platform-express": "^8.3.0",
     "big.js": "^6.2.1",
+    "cids": "^1.1.9",
     "cli-progress": "^3.10.0",
     "dotenv": "^16.0.1",
     "execa": "^5.1.1",
@@ -21,11 +23,12 @@
     "graphql-scalars": "^1.20.1",
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^3.7.3",
-    "ipfs-http-client": "^55.0.0",
+    "ipfs-http-client": "^60.0.0",
     "it-pushable": "^1.4.2",
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
     "mongoose": "^7.0.2",
+    "multiformats": "^11.0.2",
     "node-schedule": "^2.1.1",
     "p-queue": "^7.2.0",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +45,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
+    "nodemon": "^2.0.20",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.7.0",
@@ -50,7 +54,7 @@
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "nodemon --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\"  src/index.ts",
     "dev-full": "concurrently \"npm run dev\" \"npm run start-workers\"",
     "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
