--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -14,6 +14,17 @@ services:
       - .env
     environment:
       IPFS_HOST: ipfs:5001
+      MONGO_HOST: mongo:27022
+  mongo:
+    container_name: mongo_cluster_rewarding
+    image: mongo:latest
+    restart: always
+    ports:
+      - 27022:27017
+    networks:
+      - cluster-rewarding-server
+    volumes:
+      - ./data/mongodb:/data/db
   ipfs:
     container_name: ipfs-cluster
     image: ipfs/kubo:v0.19.0
