--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:report": "sensible-browser ./coverage/lcov-report/index.html",
     "test": "jest --coverage",
+    "ts-node": "nodemon --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\"",
     "start-workers": "concurrently \"npm run start-worker:hive-events\" \"npm run start-worker:background-scripts\"",
     "start-worker:hive-events": "node dist/workers/hive-stream.js",
     "start-worker:background-scripts": "node dist/workers/background-proc/index.js"
