--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "type": "module",
   "dependencies": {
+    "@hiveio/dhive": "^1.2.6",
+    "axios": "^1.3.5",
     "cids": "^1.1.9",
     "dotenv": "^16.0.1",
     "ipfs-http-client": "^60.0.0",
