--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,9 @@ services:
     command:
       - daemon
       - --enable-pubsub-experiment
+    ports: 
+      - 4001:4001
+      - 5011:5001
     networks:
       - cluster-rewarding-client
 
