--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -28,6 +28,7 @@ services:
   ipfs:
     container_name: ipfs-cluster
     image: ipfs/kubo:v0.19.0
+    restart: always
     command:
       - daemon
       - --enable-pubsub-experiment
