--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
   ipfs-cluster:
     container_name: cluster-rewarding-follower
     image: ipfs/ipfs-cluster:1.0.6
+    restart: always
     entrypoint:
       - /usr/local/bin/ipfs-cluster-follow
       - 3speak-cluster 
@@ -37,6 +38,7 @@ services:
   ipfs-cluster-client:
     container_name: cluster-rewarding-ipfs
     image: ipfs/kubo:v0.19.0
+    restart: always
     command:
       - daemon
       - --enable-pubsub-experiment
