tweak: init profile server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     command:
       - daemon
       - --enable-pubsub-experiment
+      - --init-profile
+      - server
     environment: 
       IPFS_PATH: /etc/ipfs
     volumes:
