--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - --init 
       - https://ipfs.3speak.tv/ipns/ipfs-cluster.3speak.tv
     environment:
+      CLUSTER_RESTAPI_HTTPLISTENMULTIADDRESS: /ip4/0.0.0.0/tcp/34912
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs-cluster-client/tcp/5001
     networks:
       - cluster-rewarding-client
